<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_task_one"
            android:icon="@drawable/ic_looks_one_black_24dp"
            android:title="@string/task_1" />

        <item
            android:id="@+id/nav_task_two"
            android:icon="@drawable/ic_looks_two_black_24dp"
            android:title="@string/task_2" />

        <item
            android:id="@+id/nav_task_three"
            android:icon="@drawable/ic_looks_3_black_24dp"
            android:title="@string/task_3" />

        <item
            android:id="@+id/nav_task_four"
            android:icon="@drawable/ic_looks_4_black_24dp"
            android:title="@string/task_4" />

        <item
            android:id="@+id/nav_task_five"
            android:icon="@drawable/ic_looks_5_black_24dp"
            android:title="@string/task_5" />

        <item
            android:id="@+id/nav_task_six"
            android:icon="@drawable/ic_looks_6_black_24dp"
            android:title="@string/task_6" />
    </group>
</menu>