<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar_task_five"
        layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/btn_fade_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fade_in" />

        <Button
            android:id="@+id/btn_fade_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fade_out" />

        <Button
            android:id="@+id/btn_blink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blink" />

        <Button
            android:id="@+id/btn_zoom_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zoom_in" />

        <Button
            android:id="@+id/btn_rotate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rotate" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/txt_anim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_animate"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>