<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/app_bar"
        android:id="@+id/app_bar_task_two" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/fibonacci"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fibonacci_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_two_hint"
        android:inputType="number"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_fibonacci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_find_text" />

        <TextView
            android:id="@+id/fibonacci_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/factorial"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/factorial_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_two_hint"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_factorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_find_text" />

        <TextView
            android:id="@+id/factorial_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>